Updating these pages to recommended

--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>Basic Portfolio Rob Krueger</title>
-  <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header>
-    <h1>Rob Krueger</h1>
-  <nav>
-    <a href="index.html">About</a> |
-    <a href="portfolio.html">Portfolio</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
-  <section id="contentbox">
-      <h2>About Me</h2>
-      <hr></hr>
-      <img id="bio-image" src="Assets/images/IMG_9344.jpg" alt="Rob photo">
-   <p class id="bio">Hello there! My name is Rob Krueger. I enjoy cooking, animals, canoe trips, skiing, travel, video games, long guitar jams, hockey, and sunshine. I am learning to code, and this is my first website!</p>
-  <p class id="bio">I started this course at the beginning of May and thus far have quite enjoyed it. I do believe it will take a bit of time to learn the basic .css elements needed to style with proficiency!</p>
-  <p class id="bio">My patience is being tested by this assignment! But that is quite alright! My calm demeanor never lets the hours of tedious code mistakes, changes, and general frustration get the better of me! ;-)</p>
-</section>
-<br>
-<br>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<footer>
-    Copyright &COPY;
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
   </footer>
-  
-
-
 </body>
 
 </html>
