--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>Basic Portfolio Rob Krueger</title>
-  <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+  <title>Contact | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header>
-    <h1>Rob Krueger</h1>
-    <nav>
-    <a href="index.html">About</a> |
-    <a href="portfolio.html">Portfolio</a> |
-    <a href="contact.html">Contact</a>
-    </nav>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section id="contentbox">
-      <h2>Contact</h2>
-      <hr></hr>
-      <form>
-        Name
-        <br>
-        <input type="text" name="Name">
-        <br>
-        Email
-        <br>
-        <input type="text" name="Email">
-        <br>
-        Message
-        <br>
-       <textarea></textarea>
-        <br>
-        <br>
-        <input type="submit" value="Submit">
-      </form>
-  </section>
-<br>
-<br>
-  <footer>
-    Copyright &COPY;
-  </footer>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
 
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
 
 </html>
