--- a/portfolio.html
+++ b/portfolio.html
@@ -1,63 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Basic Portfolio Rob Krueger</title>
-    <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
-  </head>
-  
-  <body>
-  
-    <header>
-      <h1>Rob Krueger</h1>
-    <nav>
-      <a href="index.html">About</a> |
-      <a href="portfolio.html">Portfolio</a> |
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-    
-  <section id="portfoliobox">
-    <h2>Portfolio</h2>
-    <hr></hr>
-    <div class="box">
-      <img id="hangman" src="Assets/images/hangman.jpg" alt="Hangman">
-      <div class="text">
-        <h3>Hangman</h3>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-    <div class="box">
-      <img id="rpggame" src="Assets/images/rpggame.jpg" alt="RPG Game">
-      <div class="text">
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+
+        <h3>Word Guess</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
         <h3>RPG Game</h3>
       </div>
-    </div>
-    <div class="box">
-        <img id="triviagame" src="Assets/images/triviagame.jpg" alt="Trivia Game">
-        <div class="text">
-          <h3>Trivia Game</h3>
-        </div>
-      </div>
-    <div class="box">
-        <img id="rutgersinfowidget" src="Assets/images/rutgersinfowidget.jpg" alt="Rutgers Info Widget">
-        <div class="text">
-          <h3>Rutgers Info Widget</h3>
-        </div>
-    </div>
-    <div class="box">
-        <img id="rockpaperscissors" src="Assets/images/rockspaperscissors.jpg" alt="Rock Paper Scissors">
-        <div class="text">
-          <h3>Rock Paper Scissors</h3>
-        </div>
-    </div>
-  </section>
-<br>
-<br>
-<footer>
-  Copyright &COPY;
-</footer>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy;
+    </div>
+  </footer>
 </body>
 
 </html>
