updated assets and css for 640px res and html pages - still need to do 768px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rob Krueger</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Rob Krueger</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -24,13 +25,13 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="Assets/images/IMG_9344.jpg" class="auth-image" alt="Rob Krueger">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p>Hello there! My name is Rob Krueger. I enjoy cooking, animals, canoe trips, skiing, travel, video games, long guitar jams, hockey, and sunshine. I am learning to code, and this is my first website!</p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p>I started this course at the beginning of May and thus far have quite enjoyed it. I do believe it will take a bit of time to learn the basic .css elements needed to style with proficiency!</p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p>My patience is being tested by this assignment! But that is quite alright! My calm demeanor never lets the hours of tedious code mistakes, changes, and general frustration get the better of me! ;-)</p>
 
     </section>
 
