updated my responsive portfolio to inlude 5 assingments. I also pinned 3 assignments in my github account

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,29 +26,29 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="Assets/images/hangman.jpg" alt="Hangman">
-
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="Assets/images/rpggame.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="Assets/images/triviagame.jpg" alt="Trivia Game">
+        <a href= https://vonkruegs.github.io/TriviaGame> <img id="triviagame" src="Assets/images/triviagame.png" alt="TriviaGame"></a> 
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="Assets/images/rutgersinfowidget.jpg" alt="Rutgers Info Widget">
+        <a href= https://vonkruegs.github.io/Unit-4-Game> <img id="crystals" src="Assets/images/crystals.png" alt="Crystals"></a>
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Crystals</h3>
       </div>
       <div class="work">
-        <img src="Assets/images/rockspaperscissors.jpg" alt="Rock Paper Scissors">
+        <a href= https://vonkruegs.github.io/GifTastic> <img id="giftastic" src="Assets/images/giftastic.png" alt="GifTastic"></a> 
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>GifTastic</h3>
+      </div>
+      <div class="work">
+        <a href= https://vonkruegs.github.io/Trains> <img id="trains" src="Assets/images/trains.png" alt="Trains"></a>
+
+        <h3>Trains</h3>
+      </div>
+      <div class="work">
+        <a href= https://chantal-o.github.io/Project-1> <img id="carboneers" src="Assets/images/carboneers.png" alt="Carboneers"></a>
+
+        <h3>Carboneers</h3>
       </div>
 
     </section>
