Updated the About Me

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
       <img src="Assets/images/IMG_9344.jpg" class="auth-image" alt="Rob Krueger">
 
-      <p>Hello there! My name is Rob Krueger. I enjoy cooking, animals, canoe trips, skiing, travel, video games, long guitar jams, hockey, and sunshine. I am learning to code, and this is my first website!</p>
+      <p>I am a Full Stack Developer and Exec./ Management-level leader for Product and Application Development. My strengths include leading cross-functional software teams to develop products from prototype to release. I have excellent team leadership, communication, strategic planning, iterative development and overall management skills.</p>
 
-      <p>I started this course at the beginning of May and thus far have quite enjoyed it. I do believe it will take a bit of time to learn the basic .css elements needed to style with proficiency!</p>
+      <p>My programming languages include HTML5, CSS3, Javascript, JQuery, Bootstrap, Firebase, Node Js, MySQL, MongoDB, Express, Handelbars.js & ReactJS.</p>
 
-      <p>My patience is being tested by this assignment! But that is quite alright! My calm demeanor never lets the hours of tedious code mistakes, changes, and general frustration get the better of me! ;-)</p>
+      <p>Education: BScH Earth Based Systems, Queen's University. BEd, University of Toronto. PMP certified in good standing. Full-Stack Development Course, University of Toronto UCS.</p>
 
     </section>
 
