added GoogleBooksSearch to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href= https://vonkruegs.github.io/TriviaGame> <img id="triviagame" src="Assets/images/triviagame.png" alt="TriviaGame"></a> 
+        <a href= https://polar-temple-13995.herokuapp.com> <img id="googlebookssearch" src="Assets/images/googlebookssearch.png" alt="GoogleBooksSearch"></a> 
 
-        <h3>Trivia Game</h3>
+        <h3>Google Books Search</h3>
       </div>
       <div class="work">
         <a href= https://vonkruegs.github.io/Unit-4-Game> <img id="crystals" src="Assets/images/crystals.png" alt="Crystals"></a>
