Updated the font, added another react project foodhero, and changed the main colour from teal to black

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rob Krueger</title>
   <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
 
       <p>My programming languages include HTML5, CSS3, Javascript, JQuery, Bootstrap, Firebase, Node Js, MySQL, MongoDB, Express, Handelbars.js & ReactJS.</p>
 
-      <p>Education: BScH Earth Based Systems, Queen's University. BEd, University of Toronto. PMP certified in good standing. Full-Stack Development Course, University of Toronto UCS.</p>
+      <p>Education: BScH Earth Based Systems, Queen's University | BEd, University of Toronto | PMP certified in good standing | Full-Stack Development Course, University of Toronto UCS.</p>
 
     </section>
 
