--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <p>My programming languages include HTML5, CSS3, Javascript, JQuery, Bootstrap, Firebase, Node Js, MySQL, MongoDB, Express, Handelbars.js & ReactJS.</p>
 
-      <p>Education: BScH Earth Based Systems, Queen's University | BEd, University of Toronto | PMP certified in good standing | Full-Stack Developer Certified, University of Toronto UCS.</p>
+      <p>Education: BScH Earth Based Systems, Queen's University | BEd, University of Toronto | PMP certified in good standing | Full-Stack Developer Certified, University of Toronto SCS.</p>
 
     </section>
 
