--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rob Krueger</title>
   <link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
